[gd_scene load_steps=9 format=3 uid="uid://bqk4e5e2yfpdf"]

[ext_resource type="Script" path="res://game/entities/ui/e_main_menu.gd" id="1_bgpaa"]
[ext_resource type="Script" path="res://game/components/ui/c_ui_visiblity.gd" id="2_73by8"]
[ext_resource type="Script" path="res://addons/gecs/component.gd" id="2_87lnh"]
[ext_resource type="FontFile" uid="uid://cs3q1u0vc4jhn" path="res://game/assets/fonts/FEASFBI_.TTF" id="3_dxyum"]
[ext_resource type="Theme" uid="uid://ck7vy3altix2h" path="res://game/assets/themes/zamn-font.tres" id="3_e40tu"]
[ext_resource type="Script" path="res://game/components/ui/c_main_menu.gd" id="3_oifja"]

[sub_resource type="Resource" id="Resource_q805j"]
script = ExtResource("2_73by8")

[sub_resource type="Resource" id="Resource_f8576"]
script = ExtResource("3_oifja")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_bgpaa")
component_resources = Array[ExtResource("2_87lnh")]([SubResource("Resource_q805j"), SubResource("Resource_f8576")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Wrapper" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BG" type="ColorRect" parent="CanvasLayer/Wrapper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="PasswordScreen" type="Control" parent="CanvasLayer/Wrapper"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Wrapper/PasswordScreen"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -188.0
offset_right = 4.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PasswordText" type="RichTextLabel" parent="CanvasLayer/Wrapper/PasswordScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_e40tu")
theme_override_colors/default_color = Color(0, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/normal_font = ExtResource("3_dxyum")
theme_override_font_sizes/normal_font_size = 200
text = "Password"
fit_content = true
horizontal_alignment = 1

[node name="PasswordInput" type="LineEdit" parent="CanvasLayer/Wrapper/PasswordScreen/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 46
placeholder_text = "Enter Password"
alignment = 1

[node name="StartWithPassword" type="RichTextLabel" parent="CanvasLayer/Wrapper/PasswordScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_e40tu")
theme_override_colors/default_color = Color(0, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/normal_font = ExtResource("3_dxyum")
theme_override_font_sizes/normal_font_size = 115
bbcode_enabled = true
text = "[url]start[/url]"
fit_content = true
horizontal_alignment = 1
meta_underlined = false
hint_underlined = false

[node name="MenuScreen" type="Control" parent="CanvasLayer/Wrapper"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Wrapper/MenuScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RotateGroup" type="Control" parent="CanvasLayer/Wrapper/MenuScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Wrapper/MenuScreen/VBoxContainer/RotateGroup"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -146.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2

[node name="Zombies" type="RichTextLabel" parent="CanvasLayer/Wrapper/MenuScreen/VBoxContainer/RotateGroup/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_e40tu")
theme_override_colors/default_color = Color(0, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/normal_font = ExtResource("3_dxyum")
theme_override_font_sizes/normal_font_size = 200
text = "Zombies Attack!"
fit_content = true
horizontal_alignment = 1

[node name="My" type="RichTextLabel" parent="CanvasLayer/Wrapper/MenuScreen/VBoxContainer/RotateGroup/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_e40tu")
theme_override_colors/default_color = Color(0, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/normal_font = ExtResource("3_dxyum")
theme_override_font_sizes/normal_font_size = 80
text = "Mayhem Nextdoor"
fit_content = true
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Wrapper/MenuScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 55
theme_override_constants/margin_bottom = 55

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Wrapper/MenuScreen/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Start" type="RichTextLabel" parent="CanvasLayer/Wrapper/MenuScreen/VBoxContainer/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_e40tu")
theme_override_colors/default_color = Color(0, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/normal_font = ExtResource("3_dxyum")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[url]start[/url]"
fit_content = true
horizontal_alignment = 2
meta_underlined = false
hint_underlined = false

[node name="Password" type="RichTextLabel" parent="CanvasLayer/Wrapper/MenuScreen/VBoxContainer/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_e40tu")
theme_override_colors/default_color = Color(0, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 12
theme_override_fonts/normal_font = ExtResource("3_dxyum")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[url]password[/url]"
fit_content = true
horizontal_alignment = 2
meta_underlined = false
hint_underlined = false

[connection signal="meta_clicked" from="CanvasLayer/Wrapper/PasswordScreen/VBoxContainer/StartWithPassword" to="." method="_on_start_clicked"]
[connection signal="meta_clicked" from="CanvasLayer/Wrapper/MenuScreen/VBoxContainer/MarginContainer/VBoxContainer/Start" to="." method="_on_start_clicked"]
[connection signal="meta_clicked" from="CanvasLayer/Wrapper/MenuScreen/VBoxContainer/MarginContainer/VBoxContainer/Password" to="." method="_on_password_clicked"]
